@@ -1,6 +1,6 @@
 kbd-chooser (1.22) UNRELEASED; urgency=low
 
-  [ Tollef Fog Heen ]  
+  [ Tollef Fog Heen ]
   * Nuke obsolete emacs variables from debian/changelog
   * Remove di_info and di_debug defines from kbd-chooser.c, they are
     available through debian-installer.h
@@ -8,7 +8,10 @@ kbd-chooser (1.22) UNRELEASED; urgency=low
     a char is bigger than 256.
   * Add missing #include <sys/ioctl.h> to ksyms.c
 
- -- Tollef Fog Heen <tfheen@debian.org>  Thu,  1 Dec 2005 11:56:59 +0100
+  [ Frans Pop ]
+  * Change forgotten references to "none" to "no-keyboard".
+
+ -- Frans Pop <fjp@debian.org>  Sat,  3 Dec 2005 21:07:26 +0100
 
 kbd-chooser (1.21) unstable; urgency=low
 
